# restframework_channels

./: README.md  pyproject.toml
chats/: apps.py  consumers.py  models.py  routings.py  serializers.py
chats/migrations/: 0001_initial.py
config/: asgi.py  settings.py
